--- a/src/styles/Common.module.css
+++ b/src/styles/Common.module.css
@@ -7,7 +7,7 @@
 
 /* Основний контейнер сторінки */
 .container {
-  padding: 1rem 1rem;
+  padding: 1rem 2rem;
   width: 100%;
   max-width: 1000px;
   margin: 0 auto;
